Adds get currencies endpoint.
